--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/three": "0.165.0",
     "vite": "^5.0.10"
   },
   "dependencies": {
+    "three": "0.152.2",
     "uuid": "^9.0.1"
   }
 }
