--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/three": "0.165.0",
+    "typescript": "^5.5.3",
     "vite": "^5.0.10"
   },
   "dependencies": {
