--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/react": "^18.3.11",
+    "@types/react-dom": "^18.3.0",
     "@types/three": "0.165.0",
+    "@vitejs/plugin-react": "^4.3.2",
     "typescript": "^5.5.3",
     "vite": "^5.0.10"
   },
   "dependencies": {
     "openbim-components": "1.1.5",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "three": "0.152.2",
     "uuid": "^9.0.1"
   }
